# arvoreBinaria

./: CMakeLists.txt  main.c
Altura/: altura.c  altura.h
Arvore/: arvore.c  arvore.h
Caminhamentos/: caminhamentoERD.c  caminhamentoERD.h
Lista/: lista.c  lista.h
No/: no.h
Util/: booleano.h
