cmake_minimum_required(VERSION 3.13)
project(ArvoreBinaria C)

set(CMAKE_C_STANDARD 99)

add_executable(ArvoreBinaria main.c No/no.h Util/booleano.h Arvore/arvore.c Arvore/arvore.h Caminhamentos/caminhamentoERD.c Caminhamentos/caminhamentoERD.h Altura/altura.c Altura/altura.h Lista/lista.c Lista/lista.h)